# classification-project

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  setup.py  template.py
config/: config.yaml
kaggle/: dataset.py
research/: 01_data_ingestion.ipynb  trials.ipynb
src/cnnClassifier/: __init__.py
src/cnnClassifier/utils/: common.py
