[project]
name = "classification1"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "torch (>=2.7.1,<3.0.0)",
    "torchvision (>=0.22.1,<0.23.0)",
    "torchaudio (>=2.7.1,<3.0.0)",
    "pandas (>=2.3.0,<3.0.0)",
    "dvc (>=3.60.1,<4.0.0)",
    "ipykernel (>=6.29.5,<7.0.0)",
    "matplotlib (>=3.10.3,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "pyyaml (>=6.0.2,<7.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "ensure (>=1.0.4,<2.0.0)",
    "joblib (>=1.5.1,<2.0.0)",
    "fastapi[standard] (>=0.115.14,<0.116.0)",
    "scipy (>=1.16.0,<2.0.0)",
    "python-box (>=7.3.2,<8.0.0)",
    "kagglehub (>=0.3.12,<0.4.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
